tests/reference/asr_preprocess-cpp_err3-a7ea818.stderr
C preprocessor error: Argument list is not closed with ')'
 --> tests/errors/cpp_err3.f90:3:6
  |
3 | #if f(2 < 1+2
  |      ^ 
